Actualizacion de css

--- a/index.html
+++ b/index.html
@@ -39,5 +39,12 @@
     </main>
 
     <script src="app.js" defer></script>
+    <footer class="footer">
+        <p>© 2025 Jose Ortega</p>
+        <p>
+            <a href="https://www.instagram.com/mr.orteg4/" target="_blank">Instagram</a> |
+            <a href="https://www.linkedin.com/in/jos%C3%A9-ortega-497387321/" target="_blank">LinkedIn</a>
+        </p>
+    </footer>    
 </body>
 </html>
